grammar.js
    source_file: $ => repeat(choice($.declaration, ";")),

    /*
     * declarations
     */

    modifier: $ => choice("priv", "pub", "extern", "anx"),

    _as_clause: $ => seq("as", field("alias", choice($.identifier, "*"))),

    // `import` and `plugin` differ only in the keyword: both take a module name or a file name.
    import: $ => dependency($, "import"),
    plugin: $ => dependency($, "plugin"),

    use: $ => seq(
      repeat($.modifier),
      "use",
      field("path", $.path),
      optional($._as_clause),
      ";",
    ),

    mod: $ => seq(
      repeat($.modifier),
      "mod",
      field("name", $.identifier),
      repeat(choice($.declaration, ";")),
      "end",
    ),

    let: $ => seq(
      repeat($.modifier),
      "let",
      field("pattern", $.pattern),
      "=",
      field("value", $.expression),
    ),

    // `anx I = path` - an alias for the annex `path` denotes.
    anx: $ => seq(
      repeat($.modifier),
      "anx",
      field("name", $.identifier),
      "=",
      field("target", $.path),
    ),

    axm: $ => seq(
      repeat($.modifier),
      "axm",
      choice(
        seq(field("name", $.identifier), ":", field("type", $.expression)),
        seq(
          optional(seq(field("name", $.identifier), ".")),
          $.tag_list,
          ":",
          field("type", $.expression),
        ),
      ),
      optional(seq(",", field("normalizer", $.identifier))),
      optional(seq(
        ",",
        field("curry", $.nat_literal),
        optional(seq(",", field("trip", $.nat_literal))),
      )),
    ),

    tag_list: $ => seq("(", commaSep($.tag), ")"),

    tag: $ => seq(
      field("name", $.identifier),
      repeat(seq("=", field("alias", $.identifier))),
    ),

    lam: $ => prec.right(seq(
      repeat($.modifier),
      field("kind", choice("lam", "con", "fun")),
      field("name", $.identifier),
      repeat1($.domain),
      optional(seq(":", field("codomain", $.expression))),
      choice(
        seq("=", field("body", $.expression)),
        ";", // a bodyless `extern` forward declaration
      ),
    )),

    mutual: $ => seq(repeat($.modifier), "mutual", repeat(choice($.lam, $.rec, ";")), "end"),

    _declarations: $ => prec.left(repeat1(seq($.declaration, repeat(";")))),

    /*
     * patterns and telescopes
     *
     * A pattern destructs a value, a telescope describes a type.  The two are identical
     * except that a telescope additionally admits a bare expression - which is what makes
     * almost anything parse as a telescope and forces the conflicts declared above.
     */

    typed_binder: $ => prec.right(PREC.binder, seq(
      field("name", $.identifier),
      ":",
      field("type", $.expression),
    )),

    // `I+ ":" e` distributes one type over several names; only ever a list element.
    group: $ => seq(
      field("name", $.identifier),
      repeat1(field("name", $.identifier)),
      ":",
      field("type", $.expression),
    ),

    tuple_pattern: $ => seq("(", commaSep(choice($.group, $.pattern)), ")"),

    // `{...}` - an implicit domain; its elements are telescopes.
    implicit: $ => seq("{", commaSep(choice($.group, $.telescope)), "}"),

    domain: $ => prec.right(seq(
      field("pattern", choice($.pattern, $.sigma, $.implicit)),
      optional($.filter),
    )),

    filter: $ => seq("@", field("value", $.expression)),

    /*
     * expressions
     */

    _operand: $ => choice(
      $.primitive,
      $.path,
      $.type,
      $.rule_type,
      $.nat_literal,
      $.idx_literal,
      $.float_literal,
      $.char_literal,
      $.string_literal,
      $.bot,
      $.top,
      $.annotated,
      $.decl_expr,
      $.cn_type,
      $.fn_type,
      $.lambda,
      $.ret,
      $.single,
      $.wrap,
      $.array,
      $.pack,
      $.sigma,
      $.tuple,
      $.match,
    ),

    primitive: $ => choice(
      "Univ",
      "Nat",
      "Idx",
      "Bool",
      "tt",
      "ff",
      "i1", "i8", "i16", "i32", "i64",
      "I1", "I8", "I16", "I32", "I64",
      "□",
    ),

    // `*` abbreviates `Type (0:Univ)`; `★` is its Unicode spelling.
    star: $ => choice("*", "★"),

    bot: $ => choice("bot", "⊥"),
    top: $ => choice("top", "⊤"),

    // `Type e` and `Rule e` bound their argument at application level.
    path: $ => seq(
      $.identifier,
      repeat(seq(".", $.identifier)),
    ),

    /*
     * literals
     */

    // A sign is part of the literal *expression*, never of the literal token.  It is kept
    // out of `_operand` on purpose: after a complete expression `+`/`-` are always the
    // infix operators, so `f -23` subtracts - pass a negative argument as `f (-23)`.
    annotated: $ => prec(PREC.lit, seq(
      field("value", choice(
        $.nat_literal,
        $.idx_literal,
        $.float_literal,
        $.char_literal,
        $.string_literal,
        $.bot,
        $.top,
      )),
      ":",
      field("type", $._operand),
    )),

    // The base prefix is split off as its own `base_prefix` token so highlighting can set the
    // `0x` of `0xdeadbeef` apart from its digits; the digit tokens stay hidden and are paired
    // with their prefix, so `0b19` is still no literal.
    nat_literal: $ => choice(
      $._dec_digits,
      seq(field("prefix", alias($._bin_prefix, $.base_prefix)), $._bin_digits),
      seq(field("prefix", alias($._oct_prefix, $.base_prefix)), $._oct_digits),
      seq(field("prefix", alias($._hex_prefix, $.base_prefix)), $._hex_digits),
    ),

    // `23₂`, `23_2`, `23i32` - a literal of type `Idx n`; the `iN` form spells a bit width.
    // The size is split off as its own `idx_suffix` token so highlighting can set it apart from
    // the value.  `token.immediate` keeps the two glued together - `23 i32` stays an application -
    // and the `prec` makes the suffix beat the identically spelled `identifier` / `i32` primitive.
    idx_literal: $ => seq(
      field("value", $.nat_literal),
      field("suffix", $.idx_suffix),
    ),

    _bin_prefix: $ => /0[bB]/,
    _oct_prefix: $ => /0[oO]/,
    _hex_prefix: $ => /0[xX]/,

    _bin_digits: $ => token.immediate(/[01]+/),
    _oct_digits: $ => token.immediate(/[0-7]+/),
    _hex_digits: $ => token.immediate(/[0-9a-fA-F]+/),
    _dec_digits: $ => /[0-9]+/,

    string_literal: $ => /"(\\.|[^"\\])*"/,

    decl_expr: $ => prec.right(PREC.trailing, seq(
      $._declarations,
      field("body", $.expression),
    )),

    // `t → e`.  A bare `I: e` is *not* an expression, so a named domain only ever comes
    // out of `[...]`/`{...}` - which is what keeps `e → e` and `t → e` one rule.
    pi: $ => prec.right(PREC.arrow, seq(
      field("domain", choice($.expression, $.implicit, $.alias_telescope)),
      $._arrow_r,
      field("codomain", $.expression),
    )),

    // `Cn t` abbreviates `t → ⊥` and so has no codomain at all.
    cn_type: $ => prec.right(PREC.trailing, seq(
      "Cn",
      field("domain", choice($.telescope, $.implicit)),
    )),

    // `Fn t → e` receives an implicit `ret` continuation.  Unlike `Cn`, its domain is
    // bounded at `pi` level so that it stops before the `→`.
    fn_type: $ => prec.right(PREC.arrow, seq(
      "Fn",
      field("domain", choice($.typed_binder, $.alias_telescope, $.implicit, $._app_expression)),
      $._arrow_r,
      field("codomain", $.expression),
    )),

    lambda: $ => prec.right(PREC.trailing, seq(
      field("kind", choice("λ", "lm", "cn", "fn")),
      repeat1($.domain),
      optional(seq(":", field("codomain", $.expression))),
      "=",
      field("body", $.expression),
    )),

    ret: $ => prec.right(PREC.trailing, seq(
      "ret",
      field("pattern", $.pattern),
      "=",
      field("callee", $.expression),
      "$",
      field("argument", $.expression),
      ";",
      field("body", $.expression),
    )),

    // The `;` is what tells an array from a singleton type and a pack from a wrap.
    array: $ => seq(
      "«",
      field("shape", $.shape),
      ";",
      field("body", $.expression),
      "»",
    ),

    shape: $ => commaSep1($.arity),

    arity: $ => choice($.typed_binder, $.expression),

    sigma: $ => seq("[", commaSep(choice($.group, $.telescope)), "]"),

    tuple: $ => seq("(", commaSep($.expression), ")"),

    match: $ => prec.right(PREC.trailing, seq(
      "match",
      field("scrutinee", $.expression),
      "with",
      optional("|"),
      $.match_arm,
      repeat(seq("|", $.match_arm)),
    )),

    // A union arm is a plain pattern; a variant arm names its case, or gives its index, and may bind a payload.
    match_arm: $ => prec.right(PREC.trailing, seq(
      choice(
        field("pattern", $.pattern),
        field("index", $.nat_literal),
      ),
      optional(field("payload", $.pattern)),
      "=>",
      field("body", $.expression),
    )),

    /*
     * infix expressions
     */

    // An operand that binds at least as tightly as `#`.
    _atom: $ => choice($._operand, $.extract),

    // An operand that binds at least as tightly as application.
    _app_expression: $ => choice($._atom, $.application),

    // The prefix `#` eliminates a singleton; only an application and an extract reach into it.
    extract: $ => prec.left(PREC.extract, seq(
      field("aggregate", $._atom),
      "#",
      field("index", $._operand),
    )),

    // `e ("#" e)+ ← e` yields a *new* aggregate; the `#` on the left is mandatory.
    insert: $ => prec.right(PREC.ins, seq(
      field("target", $.extract),
      $._arrow_l,
      field("value", $.expression),
    )),

    // Application juxtaposes its operands; only `#` and a literal ascription bind tighter,
    // so neither operand may be a looser infix expression.
    application: $ => prec.left(PREC.app, seq(
      field("callee", $._app_expression),
      optional("@"),
      field("argument", $._atom),
    )),

    // `a op b` is sugar for `` `op (a, b) ``.
    binary_expression: $ => choice(
      prec.left(PREC.shift, seq(
        field("left", $.expression),
        field("operator", choice("<<", ">>")),
        field("right", $.expression),
      )),
      prec.left(PREC.mul, seq(
        field("left", $.expression),
        field("operator", choice("*", "★", "/", "%")),
        field("right", $.expression),
      )),
      prec.left(PREC.add, seq(
        field("left", $.expression),
        field("operator", choice("+", "-")),
        field("right", $.expression),
      )),
      prec.left(PREC.rel, seq(
        field("left", $.expression),
        field("operator", choice("<", "<=", ">", ">=")),
        field("right", $.expression),
      )),
      prec.left(PREC.eq, seq(
        field("left", $.expression),
        field("operator", choice("==", "!=")),
        field("right", $.expression),
      )),
    ),

    // `| I: e | ...`; a lone `|` is the empty variant and the last payload extends as far right as it can.
    where: $ => prec.left(PREC.where, seq(
      field("body", $.expression),
      "where",
      repeat(choice($.declaration, ";")),
      "end",
    )),

    /*
     * tokens
     */

    _arrow_r: $ => choice("->", "→"),
    _arrow_l: $ => choice("<-", "←"),

    // An identifier, or an infix operator escaped into one with a leading backtick.
    identifier: $ => token(choice(
      /[_a-zA-Z][_a-zA-Z0-9]*/,
      /`(==|!=|<<|<=|>>|>=|[-+*\/%<>])/,
    )),
