test/corpus/axiom.txt
=====
simple axiom
=====

axm idx_unsafe: Nat → Idx ⊤:Nat, normalize_idx_unsafe;

---

(source_file
  (axm
    (identifier)
    (pi
      (primitive)
      (application
        (primitive)
        (annotated
          (top)
          (primitive))))
    (identifier)))

=====
axiom tag group
=====

axm nat.(add, sub, mul, div, rem): «2; Nat» → Nat, normalize_nat;

---

(source_file
  (axm
    (identifier)
    (tag_list
      (tag
        (identifier))
      (tag
        (identifier))
      (tag
        (identifier))
      (tag
        (identifier))
      (tag
        (identifier)))
    (pi
      (array
        (shape
          (arity
            (nat_literal)))
        (primitive))
      (primitive))
    (identifier)))

=====
axiom tag aliases
=====

axm ncmp.(gle = f, glE = e, gLe = l): «2; Nat» → Bool, normalize_ncmp;

---

(source_file
  (axm
    (identifier)
    (tag_list
      (tag
        (identifier)
        (identifier))
      (tag
        (identifier)
        (identifier))
      (tag
        (identifier)
        (identifier)))
    (pi
      (array
        (shape
          (arity
            (nat_literal)))
        (primitive))
      (primitive))
    (identifier)))

=====
anonymous axiom group
=====

axm (a, b): Nat;

---

(source_file
  (axm
    (tag_list
      (tag
        (identifier))
      (tag
        (identifier)))
    (primitive)))

=====
axiom curry and trip counter
=====

axm f: Nat → Nat, normalize_f, 1, 2;

---

(source_file
  (axm
    (identifier)
    (pi
      (primitive)
      (primitive))
    (identifier)
    (nat_literal)
    (nat_literal)))

=====
axiom with implicit domains
=====

axm wrap.(add, sub, mul, shl): [m: Nat] → {s: Nat} → «2; Idx s» → Idx s, normalize_wrap;

---

(source_file
  (axm
    (identifier)
    (tag_list
      (tag
        (identifier))
      (tag
        (identifier))
      (tag
        (identifier))
      (tag
        (identifier)))
    (pi
      (sigma
        (typed_binder
          (identifier)
          (primitive)))
      (pi
        (implicit
          (typed_binder
            (identifier)
            (primitive)))
        (pi
          (array
            (shape
              (arity
                (nat_literal)))
            (application
              (primitive)
              (path
                (identifier))))
          (application
            (primitive)
            (path
              (identifier))))))
    (identifier)))

=====
axiom with an identifier group
=====

axm abs: {s a: Nat} → [mem.M a, Idx s] → [mem.M a, Idx s], normalize_abs;

---

(source_file
  (axm
    (identifier)
    (pi
      (implicit
        (group
          (identifier)
          (identifier)
          (primitive)))
      (pi
        (sigma
          (application
            (path
              (identifier)
              (identifier))
            (path
              (identifier)))
          (application
            (primitive)
            (path
              (identifier))))
        (sigma
          (application
            (path
              (identifier)
              (identifier))
            (path
              (identifier)))
          (application
            (primitive)
            (path
              (identifier))))))
    (identifier)))
