test/corpus/dependency.txt
=====
plugin
=====

plugin mem;

---

(source_file
  (plugin
    (identifier)))

=====
plugin as splice
=====

pub plugin core as *;

---

(source_file
  (plugin
    (modifier)
    (identifier)))

=====
plugin by file name
=====

plugin "some/dir/foo";

---

(source_file
  (plugin
    (string_literal)))

=====
import by name
=====

import foo;

---

(source_file
  (import
    (identifier)))

=====
import by file name
=====

import "some/dir/foo.mim" as bar;

---

(source_file
  (import
    (string_literal)
    (identifier)))

=====
use
=====

use core.ops.n;

---

(source_file
  (use
    (path
      (identifier)
      (identifier)
      (identifier))))

=====
use as splice
=====

pub use eq as *;

---

(source_file
  (use
    (modifier)
    (path
      (identifier))))

=====
module
=====

pub mod mode
    anx let us = 0b00;
    anx nsw = uS;
end

---

(source_file
  (mod
    (modifier)
    (identifier)
    (let
      (modifier)
      (identifier)
      (nat_literal
        (base_prefix)))
    (anx
      (identifier)
      (path
        (identifier)))))

=====
nested modules
=====

mod a
    priv mod b
        let x = 0;
    end
end

---

(source_file
  (mod
    (identifier)
    (mod
      (modifier)
      (identifier)
      (let
        (identifier)
        (nat_literal)))))
