test/corpus/expression.txt
=====
path
=====

let x = core.nat.add;

---

(source_file
  (let
    (identifier)
    (path
      (identifier)
      (identifier)
      (identifier))))

=====
application
=====

let x = f a b;

---

(source_file
  (let
    (identifier)
    (application
      (application
        (path
          (identifier))
        (path
          (identifier)))
      (path
        (identifier)))))

=====
implicit application
=====

let x = f @T a;

---

(source_file
  (let
    (identifier)
    (application
      (application
        (path
          (identifier))
        (path
          (identifier)))
      (path
        (identifier)))))

=====
tuple
=====

let x = (23, 42, 66);

---

(source_file
  (let
    (identifier)
    (tuple
      (nat_literal)
      (nat_literal)
      (nat_literal))))

=====
one tuple groups
=====

let x = 0:(Idx s);

---

(source_file
  (let
    (identifier)
    (annotated
      (nat_literal)
      (tuple
        (application
          (primitive)
          (path
            (identifier)))))))

=====
extract
=====

let x = t#i#j;

---

(source_file
  (let
    (identifier)
    (extract
      (extract
        (path
          (identifier))
        (path
          (identifier)))
      (path
        (identifier)))))

=====
extract by field name
=====

let x = s#field;

---

(source_file
  (let
    (identifier)
    (extract
      (path
        (identifier))
      (path
        (identifier)))))

=====
insert
=====

let x = t#i#j ← v;

---

(source_file
  (let
    (identifier)
    (insert
      (extract
        (extract
          (path
            (identifier))
          (path
            (identifier)))
        (path
          (identifier)))
      (path
        (identifier)))))

=====
ascii insert
=====

let x = t#i <- v;

---

(source_file
  (let
    (identifier)
    (insert
      (extract
        (path
          (identifier))
        (path
          (identifier)))
      (path
        (identifier)))))

=====
mul binds tighter than add
=====

let x = a + b * c;

---

(source_file
  (let
    (identifier)
    (binary_expression
      (path
        (identifier))
      (binary_expression
        (path
          (identifier))
        (path
          (identifier))))))

=====
shift binds tighter than mul
=====

let x = a << b * c;

---

(source_file
  (let
    (identifier)
    (binary_expression
      (binary_expression
        (path
          (identifier))
        (path
          (identifier)))
      (path
        (identifier)))))

=====
comparison operators
=====

let a = x == y;
let b = x != y;
let c = x < y;
let d = x <= y;
let e = x > y;
let f = x >= y;

---

(source_file
  (let
    (identifier)
    (binary_expression
      (path
        (identifier))
      (path
        (identifier))))
  (let
    (identifier)
    (binary_expression
      (path
        (identifier))
      (path
        (identifier))))
  (let
    (identifier)
    (binary_expression
      (path
        (identifier))
      (path
        (identifier))))
  (let
    (identifier)
    (binary_expression
      (path
        (identifier))
      (path
        (identifier))))
  (let
    (identifier)
    (binary_expression
      (path
        (identifier))
      (path
        (identifier))))
  (let
    (identifier)
    (binary_expression
      (path
        (identifier))
      (path
        (identifier)))))

=====
star is the multiplication operator
=====

let x = f * g;

---

(source_file
  (let
    (identifier)
    (binary_expression
      (path
        (identifier))
      (path
        (identifier)))))

=====
a sign after an expression is the infix operator
=====

let x = f -23;

---

(source_file
  (let
    (identifier)
    (binary_expression
      (path
        (identifier))
      (nat_literal))))

=====
where block
=====

let x = y where let y = 1; end;

---

(source_file
  (let
    (identifier)
    (where
      (path
        (identifier))
      (let
        (identifier)
        (nat_literal)))))
