test/corpus/lam.txt
=====
lambda declaration
=====

lam f (T: *) ((x y: T), return: T → ⊥)@ff: ⊥ = return x;

---

(source_file
  (lam
    (identifier)
    (domain
      (tuple_pattern
        (typed_binder
          (identifier)
          (star))))
    (domain
      (tuple_pattern
        (tuple_pattern
          (group
            (identifier)
            (identifier)
            (path
              (identifier))))
        (typed_binder
          (identifier)
          (pi
            (path
              (identifier))
            (bot))))
      (filter
        (primitive)))
    (bot)
    (application
      (path
        (identifier))
      (path
        (identifier)))))

=====
continuation declaration
=====

con f (T: *) ((x y: T), return: Cn T) = return x;

---

(source_file
  (lam
    (identifier)
    (domain
      (tuple_pattern
        (typed_binder
          (identifier)
          (star))))
    (domain
      (tuple_pattern
        (tuple_pattern
          (group
            (identifier)
            (identifier)
            (path
              (identifier))))
        (typed_binder
          (identifier)
          (cn_type
            (path
              (identifier))))))
    (application
      (path
        (identifier))
      (path
        (identifier)))))

=====
returning continuation declaration
=====

fun f (T: *) (x y: T): T = return x;

---

(source_file
  (lam
    (identifier)
    (domain
      (tuple_pattern
        (typed_binder
          (identifier)
          (star))))
    (domain
      (tuple_pattern
        (group
          (identifier)
          (identifier)
          (path
            (identifier)))))
    (path
      (identifier))
    (application
      (path
        (identifier))
      (path
        (identifier)))))

=====
multiple paren domains
=====

con foo (n: Nat) (m: Nat) = ();

---

(source_file
  (lam
    (identifier)
    (domain
      (tuple_pattern
        (typed_binder
          (identifier)
          (primitive))))
    (domain
      (tuple_pattern
        (typed_binder
          (identifier)
          (primitive))))
    (tuple)))

=====
implicit domain
=====

con foo {A: *} = ();

---

(source_file
  (lam
    (identifier)
    (domain
      (implicit
        (typed_binder
          (identifier)
          (star))))
    (tuple)))

=====
bracketed domain
=====

lam foo [[Nat] → Nat] = 0;

---

(source_file
  (lam
    (identifier)
    (domain
      (sigma
        (pi
          (sigma
            (primitive))
          (primitive))))
    (nat_literal)))

=====
extern forward declaration
=====

extern con fwd [Nat, I32];

---

(source_file
  (lam
    (modifier)
    (identifier)
    (domain
      (sigma
        (primitive)
        (primitive)))))

=====
annex lambda declaration
=====

anx lam minus (m: Nat) {s: Nat} (a: Idx s): Idx s = wrap.sub m (0:(Idx s), a);

---

(source_file
  (lam
    (modifier)
    (identifier)
    (domain
      (tuple_pattern
        (typed_binder
          (identifier)
          (primitive))))
    (domain
      (implicit
        (typed_binder
          (identifier)
          (primitive))))
    (domain
      (tuple_pattern
        (typed_binder
          (identifier)
          (application
            (primitive)
            (path
              (identifier))))))
    (application
      (primitive)
      (path
        (identifier)))
    (application
      (application
        (path
          (identifier)
          (identifier))
        (path
          (identifier)))
      (tuple
        (annotated
          (nat_literal)
          (tuple
            (application
              (primitive)
              (path
                (identifier)))))
        (path
          (identifier))))))

=====
mutual block
=====

mutual
    lam f (x: Nat): Nat = g x;
    lam g (x: Nat): Nat = f x;
end

---

(source_file
  (mutual
    (lam
      (identifier)
      (domain
        (tuple_pattern
          (typed_binder
            (identifier)
            (primitive))))
      (primitive)
      (application
        (path
          (identifier))
        (path
          (identifier))))
    (lam
      (identifier)
      (domain
        (tuple_pattern
          (typed_binder
            (identifier)
            (primitive))))
      (primitive)
      (application
        (path
          (identifier))
        (path
          (identifier))))))

=====
where block
=====

con t () = body
    where
        con body (acc: A) = head;
    end;

---

(source_file
  (lam
    (identifier)
    (domain
      (tuple_pattern))
    (where
      (path
        (identifier))
      (lam
        (identifier)
        (domain
          (tuple_pattern
            (typed_binder
              (identifier)
              (path
                (identifier)))))
        (path
          (identifier))))))
